--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <title>Andrew's Website</title>
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+     <link href="https://fonts.googleapis.com/css?family=Alegreya|Crimson+Text|EB+Garamond|Josefin+Sans|Libre+Baskerville|Raleway" rel="stylesheet">
       <style>
          * {
          margin: 0;
@@ -14,32 +15,32 @@
          }
          body {
          background-color: ECECEC;
-         font-family: Goudy Old Style,Garamond,Big Caslon,Times New Roman,serif; 
+         font-family: 'Crimson Text', serif;
          }
          div.container {
-         width: 1060px;
+         width: 1160px;
          margin-left: auto;
          margin-right: auto;
          }
          h1 {
          color: #FB7C61;
-         font-family: Goudy Old Style,Garamond,Big Caslon,Times New Roman,serif; 
+         font-family: font-family: 'Crimson Text', serif;
          font-size: 52px;
          margin: 60px 0 20px 0;
          text-align: left;
          }
          h2 {
          color: #FB7C61;
-         ffont-family: Goudy Old Style,Garamond,Big Caslon,Times New Roman,serif; 
+         font-family: font-family: 'Crimson Text', serif;
          font-size: 22px;
          font-weight: bold;
-         margin: 0 0 20px 0;
+         margin: 0 0 24px 0;
          text-align: left;
          }
          p {
          color: #525d63;
-         font-family: Goudy Old Style,Garamond,Big Caslon,Times New Roman,serif; 
-         font-size: 20px;
+         font-family: font-family: 'Crimson Text', serif;
+         font-size: 22px;
          margin: 0 0 20px 0;
          }
          img {
@@ -52,8 +53,8 @@
          td {
          	border: none;	
          	color: #525d63;
-            font-family: Goudy Old Style,Garamond,Big Caslon,Times New Roman,serif; 
-            font-size: 20px;
+            font-family: font-family: 'Crimson Text', serif;
+            font-size: 22px;
          }
       </style>
    </head>
