--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <title>Andrew's Website</title>
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-     <link href="https://fonts.googleapis.com/css?family=Alegreya|Crimson+Text|EB+Garamond|Josefin+Sans|Libre+Baskerville|Raleway" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
       <style>
          * {
          margin: 0;
