--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
          margin: 0 0 20px 0;
          }
          table {
-         	width: 100%;
-         	margin: 0 0 60px 0;
+            width: 100%;
+            margin: 0 0 60px 0;
          }
          td {
-         	border: none;	
-         	color: #525d63;
+            border: none;  
+            color: #525d63;
             font-family: font-family: 'Crimson Text', serif;
             font-size: 22px;
          }
@@ -70,7 +70,7 @@
          </div>
          <div>
             <h2>EXPERIENCE</h2>
-            <p><b>Communications Coordinator Internship</b><br><b>Ireland+Hall Communications</b><br><b>May 2016 – September 2016</b><br><br>- Wrote proposals of services for new business developments describing the company’s objectives, strategies, tactics, and evaluation processes.<br>- Prepared research documents pertaining to the market analysis of clients – utilizing marketing tools such as Ansoff’s matrix, SWOT, Porter’s 5-forces, and customer segmentation.<br>-Communicated with clients the best way to tell their story through press releases for media outreach.<br>- Successfully executed media placement of my clients in both national (Insidetoronto) and international (Miami Herald, MovieMaker Magazine) media outlets through follow up calls from personalized email.<br>-Developed a marketing budget for one of our largest clients, along with a blocking chart to determine media and event expenses for the fiscal year.<br><br><b>Baker</b><br><b>Queensway Marketplace</b><br><b>September 2011 – September 2015</b><br><br>- Managed a small team of people to help redesign the bakery from the ground up, transforming the item catalogue from 3 items to over 40 popular sellers.<br>- Worked with clients at an individual level to help understand their needs and build the right product for their needs.<br>- Evaluated past sales numbers to predict the needs of the future customers during holiday events such as Victoria Day or Christmas.<br>-Increased dollar sales and volume sales by 50% in the first year of employment.<br>- Promoted to Bakery Manager based on performance as a part-time Produce Clerk.
+            <p><b>Communications Coordinator Internship</b><br><b>Ireland+Hall Communications</b><br><b>May 2016 – September 2016</b><br><br><i class="material-icons">keyboard_arrow_right</i> Wrote proposals of services for new business developments describing the company’s objectives, strategies, tactics, and evaluation processes.<br><i class="material-icons">keyboard_arrow_right</i> Prepared research documents pertaining to the market analysis of clients – utilizing marketing tools such as Ansoff’s matrix, SWOT, Porter’s 5-forces, and customer segmentation.<br>-Communicated with clients the best way to tell their story through press releases for media outreach.<br><i class="material-icons">keyboard_arrow_right</i> Successfully executed media placement of my clients in both national (Insidetoronto) and international (Miami Herald, MovieMaker Magazine) media outlets through follow up calls from personalized email.<br><i class="material-icons">keyboard_arrow_right</i> Developed a marketing budget for one of our largest clients, along with a blocking chart to determine media and event expenses for the fiscal year.<br><br><b>Baker</b><br><b>Queensway Marketplace</b><br><b>September 2011 – September 2015</b><br><br><i class="material-icons">keyboard_arrow_right</i> Managed a small team of people to help redesign the bakery from the ground up, transforming the item catalogue from 3 items to over 40 popular sellers.<br><i class="material-icons">keyboard_arrow_right</i> Worked with clients at an individual level to help understand their needs and build the right product for their needs.<br><i class="material-icons">keyboard_arrow_right</i> Evaluated past sales numbers to predict the needs of the future customers during holiday events such as Victoria Day or Christmas.<br><i class="material-icons">keyboard_arrow_right</i>Increased dollar sales and volume sales by 50% in the first year of employment.<br><i class="material-icons">keyboard_arrow_right</i> Promoted to Bakery Manager based on performance as a part-time Produce Clerk.
             </p>
          </div>
 
