--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
          width: 100%;
          }
          body {
-         background-color: ECECEC;
+         background-color: #FFFFFF;
          font-family: 'Crimson Text', serif;
          }
          div.container {
+         background-color: #ECECEC;
          width: 960px;
          margin-left: auto;
          margin-right: auto;
