--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          width: 100%;
          }
          body {
-         background-color: #FFFFFF;
+         background-color: #ECECEC;
          font-family: 'Crimson Text', serif;
          }
          div.container {
